plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.zerock'
version = '0.0.1-SNAPSHOT'
description = 'PuppyRun'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testAndDevelopmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'

    // 유효성 검사 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT 관련 의존성
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // 테스트할 때 쓸 가짜 DB
    testImplementation 'com.h2database:h2'

    // Discord 로그 알림 의존성
    implementation 'com.github.napstr:logback-discord-appender:1.0.0'

    // 캐시 의존성
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // 외부 api 호출  의존성
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // macOS Netty DNS Resolver
    developmentOnly 'io.netty:netty-resolver-dns-native-macos::osx-aarch_64'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Hibernate Spatial (공간 데이터 지원)
    implementation 'org.hibernate.orm:hibernate-spatial'

    // Firebase 알림 의존성
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // Spring Cloud AWS Starter
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.2.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
